Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7576

'lfs migrate -m' does not tolerate trailing slashes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.8.0
    • 3
    • 9223372036854775807

      t:lustre# mkdir d0
      t:lustre# lfs migrate -m1 d0/
      d0 migrate failed: No such file or directory (-2)
      error: migrate: migrate file 'd0/' failed
      t:lustre# lfs migrate -m1 d0
      t:lustre# lfs migrate -m1 d0/
      d0 migrate failed: No such file or directory (-2)
      error: migrate: migrate file 'd0/' failed
      

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: