LU-7576 lfs: migrate -m does not tolerate trailing slashes

Trim off trailing slashes from lfs migrate arg

Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Change-Id: Ifc775292e40bce3abdde3effbcb67a7e5656dbda